versioned_docs/version-1.0/tutorial/07-marketplace-setup.md
---
title: 7. Marketplace Setup
---

In this tutorial, we're going to create a marketplace that uses both the fungible
and non-fungible token (NFTs) contracts that we have learned about in previous tutorials.
This page requires you to execute a series of transactions to setup your accounts to complete the Marketplace tutorial.
The next page contains the main content of the tutorial.

When you are done with the tutorial, check out the [NFTStorefront repo](https://github.com/onflow/nft-storefront)
for an example of a production ready marketplace that you can use right now on testnet or mainnet!

---

<Callout type="success">
  Open the starter code for this tutorial in the Flow Playground:
  <a
    href="https://play.onflow.org/49ec2856-1258-4675-bac3-850b4bae1929"
    target="_blank"
  >
    https://play.onflow.org/49ec2856-1258-4675-bac3-850b4bae1929
  </a>
  The tutorial will be asking you to take various actions to interact with this code.
</Callout>

<Callout type="info">
  The playground code that is linked uses Cadence 0.42, but the examples
  use Cadence 1.0 to show how each contract, transaction and script
  is implemented in Cadence 1.0. 
  You can access a Cadence 1.0-compatible playground by going to https://v1.play.flow.com/.
  The project link will still work with the current version of the playground,
  but when the playground is updated to Cadence 1.0, the link will be replaced with a 1.0-compatible version.
</Callout>

If you have already completed the Marketplace tutorial, please move on to [Composable Resources: Kitty Hats](./10-resources-compose.md).

This guide will help you quickly get the playground to the state you need to complete the Marketplace tutorial.
The marketplace tutorial uses the Fungible Token and Non-Fungible token contracts
to allow users to buy and sell NFTs with fungible tokens.

The state of the accounts is the same as if you had completed the Fungible Token
and Non-Fungible Token tutorials in the same playground session.
Having your playground in this state is necessary to follow the [Composable Smart Contracts: Marketplace](./08-marketplace-compose.md) tutorial.

---

1. Open account `0x01`. Make sure the Fungible Token definitions in `ExampleToken.cdc` from the fungible token tutorial are in this account.
2. Deploy the `ExampleToken` code to account `0x01`.
3. Switch to the `ExampleNFT` contract (Contract 2)
4. Make sure you have the NFT definitions in `ExampleNFT.cdc` from the Non-fungible token tutorial in account `0x02`.
5. Deploy the NFT code to account `0x02` by selecting it as the deploying signer.
6. Run the transaction in Transaction 1. This is the `SetupAccount1Transaction.cdc` file.
   Use account `0x01` as the only signer to set up account `0x01`'s storage.

```cadence SetupAccount1Transaction.cdc
// SetupAccount1Transaction.cdc

import ExampleToken from 0x01
import ExampleNFT from 0x02

// This transaction sets up account 0x01 for the marketplace tutorial
// by publishing a Vault reference and creating an empty NFT Collection.
transaction {
  prepare(acct: auth(SaveValue, StorageCapabilities) &Account) {
        // Create a public Receiver capability to the Vault
    let receiverCap = acct.capabilities.storage.issue<&{ExampleToken.Receiver}>(
        /storage/CadenceFungibleTokenTutorialVault
    )
    acct.capabilities.publish(receiverCap, at: /public/CadenceFungibleTokenTutorialReceiver)

    // store the empty NFT Collection in account storage
    acct.storage.save(<-ExampleNFT.createEmptyCollection(nftType: nil), to: ExampleNFT.CollectionStoragePath)

    log("Collection created for account 2")

    // create a public capability for the Collection
    let cap = acct.capabilities.storage.issue<&{ExampleNFT.NFTReceiver}>(ExampleNFT.CollectionStoragePath)
    acct.capabilities.publish(cap, at: ExampleNFT.CollectionPublicPath)
  }
}
```

7. Run the transaction in Transaction 2. This is the `SetupAccount2Transaction.cdc` file.
Use account `0x02` as the only signer to set up account `0x02`'s storage.

```cadence SetupAccount2Transaction.cdc
// SetupAccount2Transaction.cdc

import ExampleToken from 0x01
import ExampleNFT from 0x02

// This transaction adds an empty Vault to account 0x02
// and mints an NFT with id=1 that is deposited into
// the NFT collection on account 0x01.
transaction {

  // Private reference to this account's minter resource
  let minterRef: &ExampleNFT.NFTMinter

  prepare(acct: auth(SaveValue, StorageCapabilities, BorrowValue) &Account) {
    // create a new vault instance with an initial balance of 30
    let vaultA <- ExampleToken.createEmptyVault()

    // Store the vault in the account storage
    acct.storage.save(<-vaultA, to: /storage/CadenceFungibleTokenTutorialVault)

    // Create a public Receiver capability to the Vault
    let receiverCap = acct.capabilities.storage.issue<&{ExampleToken.Receiver}>(
        /storage/CadenceFungibleTokenTutorialVault
    )
    acct.capabilities.publish(receiverCap, at: /public/CadenceFungibleTokenTutorialReceiver)

    // Borrow a reference for the NFTMinter in storage
    self.minterRef = acct.storage.borrow<&ExampleNFT.NFTMinter>(from: ExampleNFT.MinterStoragePath)
        ?? panic("Could not borrow owner's NFT minter reference")
  }
  execute {
    // Get the recipient's public account object
    let recipient = getAccount(0x01)

    // Get the Collection reference for the receiver
    // getting the public capability and borrowing a reference from it
    let receiverRef = recipient.capabilities
        .borrow<&{ExampleNFT.NFTReceiver}>(ExampleNFT.CollectionPublicPath)
        ?? panic("Could not borrow receiver reference")

    // Mint an NFT and deposit it into account 0x01's collection
    receiverRef.deposit(token: <-self.minterRef.mintNFT())
  }
}
```

8. Run the transaction in Transaction 3. This is the `SetupAccount1TransactionMinting.cdc` file.
   Use account `0x01` as the only signer to mint fungible tokens for account 1 and 2.

```cadence SetupAccount1TransactionMinting.cdc
// SetupAccount1TransactionMinting.cdc

import ExampleToken from 0x01
import ExampleNFT from 0x02

// This transaction mints tokens for both accounts using
// the minter stored on account 0x01.
transaction {

  // Public Vault Receiver References for both accounts
  let acct1Capability: Capability<&AnyResource{ExampleToken.Receiver}>
  let acct2Capability: Capability<&AnyResource{ExampleToken.Receiver}>

  // Private minter references for this account to mint tokens
  let minterRef: &ExampleToken.VaultMinter

  prepare(acct: auth(SaveValue, StorageCapabilities, BorrowValue) &Account) {
    // Get the public object for account 0x02
    let account2 = getAccount(0x02)

    // Retrieve public Vault Receiver references for both accounts
    self.acct1Capability = acct.capabilities.get<&{ExampleToken.Receiver}>(/public/CadenceFungibleTokenTutorialReceiver)
    self.acct2Capability = account2.capabilities.get<&{ExampleToken.Receiver}>(/public/CadenceFungibleTokenTutorialReceiver)

    // Get the stored Minter reference for account 0x01
    self.minterRef = acct.storage.borrow<&ExampleToken.VaultMinter>(from: /storage/CadenceFungibleTokenTutorialMinter)
        ?? panic("Could not borrow owner's vault minter reference")
  }

  execute {
    // Mint tokens for both accounts
    self.minterRef.mintTokens(amount: 20.0, recipient: self.acct2Capability)
    self.minterRef.mintTokens(amount: 10.0, recipient: self.acct1Capability)
  }
}
```

9. Run the script `CheckSetupScript.cdc` file in Script 1 to ensure everything is set up.

```cadence CheckSetupScript.cdc
// CheckSetupScript.cdc

import ExampleToken from 0x01
import ExampleNFT from 0x02

/// Allows the script to return the ownership info
/// of all the accounts
access(all) struct OwnerInfo {
  access(all) let acct1Balance: UFix64
  access(all) let acct2Balance: UFix64

  access(all) let acct1IDs: [UInt64]
  access(all) let acct2IDs: [UInt64]

  init(balance1: UFix64, balance2: UFix64, acct1IDs: [UInt64], acct2IDs: [UInt64]) {
    self.acct1Balance = balance1
    self.acct2Balance = balance2
    self.acct1IDs = acct1IDs
    self.acct2IDs = acct2IDs
  }
}

// This script checks that the accounts are set up correctly for the marketplace tutorial.
//
// Account 0x01: Vault Balance = 40, NFT.id = 1
// Account 0x02: Vault Balance = 20, No NFTs
access(all) fun main(): OwnerInfo {
    // Get the accounts' public account objects
    let acct1 = getAccount(0x01)
    let acct2 = getAccount(0x02)

    // Get references to the account's receivers
    // by getting their public capability
    // and borrowing a reference from the capability
    let acct1ReceiverRef = acct1.capabilities.get<&{ExampleToken.Balance}>
                          (/public/CadenceFungibleTokenTutorialReceiver)
                          .borrow()
                          ?? panic("Could not borrow acct1 vault reference")

    let acct2ReceiverRef = acct2.capabilities.get<&{ExampleToken.Balance}>
                          (/public/CadenceFungibleTokenTutorialReceiver)
                          .borrow()
                          ?? panic("Could not borrow acct2 vault reference")

    let returnArray: [UFix64] = []

    // verify that the balances are correct
    if acct1ReceiverRef.balance != 40.0 || acct2ReceiverRef.balance != 20.0 {
        panic("Wrong balances!")
    }

    // Find the public Receiver capability for their Collections
    let acct1Capability = acct1.capabilities.get<&{ExampleNFT.NFTReceiver}>(ExampleNFT.CollectionPublicPath)
    let acct2Capability = acct2.capabilities.get<&{ExampleNFT.NFTReceiver}>(ExampleNFT.CollectionPublicPath)

    // borrow references from the capabilities
    let nft1Ref = acct1Capability.borrow()
        ?? panic("Could not borrow acct1 nft collection reference")

    let nft2Ref = acct2Capability.borrow()
        ?? panic("Could not borrow acct2 nft collection reference")

    // verify that the collections are correct
    if nft1Ref.getIDs()[0] != 1 || nft2Ref.getIDs().length != 0 {
        panic("Wrong Collections!")
    }

    // Return the struct that shows the account ownership info
    return OwnerInfo(balance1: acct1ReceiverRef.balance,
                     balance2: acct2ReceiverRef.balance,
                     acct1IDs: nft1Ref.getIDs(),
                     acct2IDs: nft2Ref.getIDs())
}
```

10. The script should not panic and you should see something like this output

```
"Account 1 Balance"
40.00000000
"Account 2 Balance"
20.00000000
"Account 1 NFTs"
[1]
"Account 2 NFTs"
[]
```

---

With your playground now in the correct state, you're ready to continue with the next tutorial.

You do not need to open a new playground session for the marketplace tutorial. You can just continue using this one.
